# snips-nlu-ontology

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  README.rst  update_version.sh
.travis/: before_install.sh  common.sh  install.sh  test.sh  travis.sh
data/tests/builtin_entity_parser/: metadata.json
data/tests/builtin_entity_parser/gazetteer_entity_parser/: metadata.json
data/tests/builtin_entity_parser/gazetteer_entity_parser/parser_1/: parser
data/tests/builtin_entity_parser/gazetteer_entity_parser/parser_2/: metadata.json
data/tests/builtin_entity_parser_no_gazetteer/: metadata.json
data/tests/builtin_gazetteer_parser/: metadata.json
data/tests/builtin_gazetteer_parser/parser_2/: metadata.json  parser
data/tests/custom_gazetteer_parser/: metadata.json
data/tests/custom_gazetteer_parser/parser_1/: metadata.json
data/tests/custom_gazetteer_parser/parser_2/: parser
data/tests/gazetteer_entities/: musicArtist.json
data/tests/gazetteer_entities/music_artist/: fst  metadata.json  parser  symbol_table
doc/: Cargo.toml  build.rs
ffi/: Cargo.toml
ffi/ffi-macros/: Cargo.toml
ffi/ffi-macros/src/: builtin_entity.rs  language.rs  lib.rs  ontology.rs
ffi/src/: lib.rs
scripts/: generate_header.sh
snips-nlu-ontology/: Cargo.toml
snips-nlu-ontology-doc/: Cargo.toml  build.rs
snips-nlu-ontology-ffi/: Cargo.toml  build.rs  cbindgen.toml
snips-nlu-ontology-ffi-macros/: Cargo.toml
snips-nlu-ontology-ffi-macros/src/: builtin_entity.rs  ffi_utils.rs  language.rs  lib.rs  ontology.rs
snips-nlu-ontology-ffi-with-parsers/: Cargo.toml  cbindgen.toml
snips-nlu-ontology-ffi-with-parsers/src/: builtin_entity_parser.rs  lib.rs
snips-nlu-ontology-ffi/src/: builtin_entity.rs  builtin_entity_parser.rs  errors.rs  ffi_utils.rs  language.rs  lib.rs  macros.rs  ontology.rs  rustling_parser.rs
snips-nlu-ontology-parsers/: Cargo.toml
snips-nlu-ontology-parsers-ffi-macros/: Cargo.toml
snips-nlu-ontology-parsers-ffi-macros/src/: builtin_entity_parser.rs  gazetteer_entity_parser.rs  lib.rs
snips-nlu-ontology-parsers/src/: builtin_entity_parser.rs  gazetteer_parser.rs  lib.rs  rustling_converters.rs  test_utils.rs  utils.rs
snips-nlu-ontology-parsers/src/conversion/: gazetteer_entities.rs  mod.rs  rustling.rs
snips-nlu-ontology/src/: builtin_entity.rs  gazetteer_entity.rs  language.rs  lib.rs  macros.rs  ontology.rs
snips-nlu-ontology/src/entity/: builtin_entity.rs  gazetteer_entity.rs  grammar_entity.rs
src/: errors.rs  language.rs  lib.rs  macros.rs  ontology.rs
src/builtin_entities/: builtin_entity.rs  builtin_entity_parser.rs  mod.rs  ontology.rs  rustling_converters.rs  rustling_parser.rs
src/entity/: builtin_entity.rs  gazetteer_entity.rs  grammar_entity.rs  mod.rs
src/parsers/: builtin_entity_parser.rs
