[package]
name = "snips-nlu-ontology"
version = "0.53.0"
authors = [
    "Adrien Ball <adrien.ball@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
    "Kevin Lefevre <kevin.lefevre@snips.ai",
]
repository = "https://github.com/snipsco/snips-nlu-ontology"
description = "Ontology of the Rust NLU library API"

[workspace]
members = [
    "snips-nlu-ontology-ffi",
    "snips-nlu-ontology-doc",
    "snips-nlu-ontology-ffi/platforms/snips-nlu-ontology-python/snips-nlu-ontology-rs"
]

[dependencies]
error-chain = { version = "0.11", default-features = false }
itertools = "0.7"
lazy_static = "1.0"
rustling-ontology = { git = "https://github.com/snipsco/rustling-ontology", tag = "0.16.3" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_test = "1.0"
