[package]
name = "snips-nlu-ontology"
version = "0.53.2"
authors = [
    "Adrien Ball <adrien.ball@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
    "Kevin Lefevre <kevin.lefevre@snips.ai",
]
repository = "https://github.com/snipsco/snips-nlu-ontology"
description = "Ontology of the Rust NLU library API"

[features]
default = ["parsers"]
parsers = ["rustling-ontology", "lazy_static"]

[workspace]
members = [
    "snips-nlu-ontology-ffi",
    "snips-nlu-ontology-doc",
    "snips-nlu-ontology-ffi/platforms/snips-nlu-ontology-python/snips-nlu-ontology-rs"
]

[dependencies]
failure = "0.1"
itertools = "0.7"
lazy_static = { version = "1.0", optional = true }
rustling-ontology = { git = "https://github.com/snipsco/rustling-ontology", tag = "0.16.3", optional = true }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_test = "1.0"
