[package]
name = "snips-nlu-ontology"
version = "0.53.2"
authors = [
    "Adrien Ball <adrien.ball@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
    "Kevin Lefevre <kevin.lefevre@snips.ai",
]
repository = "https://github.com/snipsco/snips-nlu-ontology"
description = "Ontology of the Rust NLU library API"

[workspace]
members = [
    "snips-nlu-ontology-parsers",
    "snips-nlu-ontology-ffi-macros",
    "snips-nlu-ontology-ffi",
    "snips-nlu-ontology-ffi-with-parsers",
    "snips-nlu-ontology-doc",
    "snips-nlu-ontology-ffi-with-parsers/platforms/snips-nlu-ontology-python/snips-nlu-ontology-rs"
]

[dependencies]
failure = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_test = "1.0"
