[package]
name = "snips-nlu-ontology-ffi-macros"
version = "0.58.0-SNAPSHOT"
authors = [
    "Kevin Lefevre <kevin.lefevre@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
]

[dependencies]
snips-nlu-ontology = { path = "../snips-nlu-ontology" }
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "b1f4af3" }
lazy_static = "1.0"
libc = "0.2"
serde = "1.0"
serde_json = "1.0"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
