[package]
name = "snips-nlu-ontology-ffi-with-parsers"
version = "0.56.0"
authors = ["Kevin Lefevre <kevin.lefevre@snips.ai>"]

[dependencies]
failure = "0.1"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "b1f4af3" }
lazy_static = "0.1"
libc = "0.2"
snips-nlu-ontology = { path = "../snips-nlu-ontology" }
snips-nlu-ontology-ffi-macros = { path = "../snips-nlu-ontology-ffi-macros" }
snips-nlu-ontology-parsers-ffi-macros = { path = "../snips-nlu-ontology-parsers-ffi-macros" }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
