[package]
name = "snips-nlu-ontology-ffi"
version = "0.53.2"
authors = [
    "Kevin Lefevre <kevin.lefevre@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
]

[features]
default = ["parsers"]
parsers = ["snips-nlu-ontology/parsers"]

[dependencies]
snips-nlu-ontology = { path = "..", default-features = false }
failure = "0.1"
lazy_static = "1.0"
libc = "0.2"
serde = "1.0"
serde_json = "1.0"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
