[package]
name = "snips-nlu-ontology-ffi"
version = "0.57.1"
authors = ["Kevin Lefevre <kevin.lefevre@snips.ai>"]

[dependencies]
failure = "0.1"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "b1f4af3" }
lazy_static = "1.0"
libc = "0.2"
snips-nlu-ontology = { path = "../snips-nlu-ontology" }
snips-nlu-ontology-ffi-macros = { path = "../snips-nlu-ontology-ffi-macros" }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
