[package]
name = "snips-nlu-ontology-parsers-ffi-macros"
version = "0.54.2"
authors = ["Kevin Lefevre <kevin.lefevre@snips.ai>"]

[dependencies]
failure = "0.1"
libc = "0.2"
serde = "1.0"
serde_json = "1.0"
snips-nlu-ontology = { path = "../snips-nlu-ontology" }
snips-nlu-ontology-ffi-macros = { path = "../snips-nlu-ontology-ffi-macros" }
snips-nlu-ontology-parsers = { path = "../snips-nlu-ontology-parsers" }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
