[package]
name = "snips-nlu-ontology-parsers"
version = "0.59.0-SNAPSHOT"
authors = ["Kevin Lefevre <kevin.lefevre@snips.ai>"]

[dependencies]
failure = "0.1"
itertools = "0.7"
lazy_static = "1.0"
maplit = "1.0"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustling-ontology = { git = "https://github.com/snipsco/rustling-ontology", tag = "0.17.5" }
snips-nlu-ontology = { path = "../snips-nlu-ontology" }
snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.6.1" }
