[package]
name = "snips-nlu-ontology-parsers"
version = "0.58.0"
authors = ["Kevin Lefevre <kevin.lefevre@snips.ai>"]

[dependencies]
itertools = "0.7"
lazy_static = "1.0"
maplit = "1.0"
snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.6.1" }
regex = "0.2"
rustling-ontology = { git = "https://github.com/snipsco/rustling-ontology", tag = "0.17.5" }
snips-nlu-ontology = { path = "../snips-nlu-ontology" }
