[package]
name = "snips-nlu-ontology"
version = "0.54.0"
authors = [
    "Adrien Ball <adrien.ball@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
    "Kevin Lefevre <kevin.lefevre@snips.ai",
]
repository = "https://github.com/snipsco/snips-nlu-ontology"
description = "Ontology of the Rust NLU library API"

[dependencies]
failure = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
serde_test = "1.0"
