[package]
name = "snips-nlu-ontology-ffi-macros"
version = "0.67.2"
authors = [
    "Kevin Lefevre <kevin.lefevre@snips.ai>",
    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
]
edition = "2018"

[dependencies]
failure = "0.1"
ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "15d0ec98" }
lazy_static = "1.0"
libc = "0.2"
serde = "1.0"
serde_json = "1.0"
snips-nlu-ontology = { path = "../.." }

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]
